fix(website): more contrast

--- a/website/src/styles/globals.css
+++ b/website/src/styles/globals.css
@@ -10,7 +10,7 @@ body {
 }
 
 body {
-  background: #010101;
+  background: #263438;
 }
 
 a {
